testdata/parser/negative/32.txt
Parse error at 32.pdl:6:13: Illegal goto: synchronous statement escape
            goto loop; // not allowed
            ^
